# ridgeback_yumi

ridgeback_yumi_description/launch/: description.launch
ridgeback_yumi_description/urdf/: ridgeback_yumi.urdf.xacro
ridgeback_yumi_launch/: CMakeLists.txt
ridgeback_yumi_launch/launch/: gazebo_pos_control.launch  gazebo_simulation.launch  live_robot_vel_control.launch
ridgeback_yumi_launch/launch/include/: gazebo.launch  ridgeback_gazebo.launch  ridgeback_yumi_description.launch  yumi_egm_rws  yumi_gazebo.launch
ridgeback_yumi_viz/launch/: view_robot.launch
ridgeback_yumi_viz/rviz/: robot_icpslam.rviz
